# no-title-yeonu-kim-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml  lint.yml
alembic/: env.py
alembic/versions/: 23d53081763c_add_review_images_table.py  39c458686144_change_reward_to_biginteger.py  42fa0f495c60_initial.py  ac59f74875af_add_contract_address_to_events.py  dd5d7eeaabd1_add_store_event_application_review_.py  e12a0231a096_add_deposits_table.py
app/: CLAUDE.md  main.py
app/api/: deps.py
app/application/: dependencies.py  models.py  repository.py  repository_impl.py  router.py  schemas.py  service.py  service_impl.py
app/auth/: dependencies.py  models.py  repository.py  repository_impl.py  router.py  service.py  service_impl.py
app/blockchain/: dependencies.py  service.py  service_impl.py
app/core/: config.py  email.py  exceptions.py  security.py
app/db/: base.py  seed.py  session.py
app/email/: service.py  service_impl.py
app/event/: dependencies.py  repository.py  repository_impl.py  router.py  schemas.py  service.py  service_impl.py
app/models/: CLAUDE.md  application.py  deposit.py  email_verification.py  event.py  review_image.py  review_submission.py  user.py
app/ocr/: dependencies.py  service.py  service_impl.py
app/s3/: dependencies.py  router.py  service.py  service_impl.py
app/schemas/: CLAUDE.md  auth.py  common.py  deposit.py  event.py  s3.py  store.py
app/services/: CLAUDE.md  application.py  auth.py  blockchain.py  deposit.py  event.py  s3.py  store.py
app/store/: dependencies.py  models.py  repository.py  repository_impl.py  router.py  schemas.py  service.py  service_impl.py
tests/: conftest.py  test_application.py  test_auth.py  test_blockchain.py  test_deposit.py  test_event.py  test_store.py
tests/unit/: test_application_service.py  test_auth_service.py  (+4 more)
(+9 files in other folders)
